[Rahul] | BAH-3884 | Fix. Ignore Test Files Which Use PowerMock